# VideoPhaser

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nmgb/vp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp  native_lib.h
app/src/main/cpp/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
app/src/main/cpp/ffmpeg/include/libavcodec/: packet.h
app/src/main/cpp/ffmpeg/include/libavdevice/: avdevice.h
app/src/main/cpp/ffmpeg/include/libavformat/: avio.h
app/src/main/cpp/ffmpeg/include/libavutil/: bprint.h  threadmessage.h
app/src/main/cpp/media/: gl_player.cpp  gl_player.h  player.cpp  player.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
app/src/main/cpp/media/decoder/audio/: a_decoder.cpp  a_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/media/render/audio/: audio_render.h
app/src/main/cpp/media/render/audio/sound_render/: opensl_render.cpp  opensl_render.h
app/src/main/cpp/media/render/video/: video_render.h
app/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
app/src/main/cpp/opengl_es/: opengl_render.cpp  opengl_render.h
app/src/main/cpp/opengl_es/drawer/: drawer.cpp  drawer.h  video_drawer.cpp  video_drawer.h
app/src/main/cpp/opengl_es/drawer/proxy/: def_drawer_proxy_impl.cpp  def_drawer_proxy_impl.h  drawer_proxy.cpp  drawer_proxy.h
app/src/main/cpp/utils/: const.h  logger.h  one_frame.h  timer.c
app/src/main/java/com/nmgb/vp/: MainActivity.kt
app/src/main/java/com/nmgb/vp/activity/: FFmpegGLPlayerActivity.kt  SecondActivity.kt
app/src/main/java/com/nmgb/vp/decoder/: AudioDecoder.kt  BaseDecoder.kt  DecodeState.kt  IDecoder.kt  IDecoderStateListener.kt  VideoDecoder.kt
app/src/main/java/com/nmgb/vp/decoder/extractor/: AudioExtractor.kt  IExtractor.kt  MMExtractor.kt  VideoExtractor.kt
app/src/main/java/com/nmgb/vp/gl/: GLVideoDrawer.kt  IDrawer.kt  SimpleRender.kt
app/src/main/java/com/nmgb/vp/surfacewidge/: Surfacing.kt
app/src/main/res/layout/: activity_ffmpeg_glplayer.xml  activity_main.xml  activity_second.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nmgb/vp/: ExampleUnitTest.kt  Testss.java
gradle/wrapper/: gradle-wrapper.properties
